<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewsActivity">

    <TextView
        android:id="@+id/news_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/news"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/newActivityPseudo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prompt_pseudo"
        android:textColor="@color/design_default_color_secondary_variant"
        android:textSize="30sp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintTop_toBottomOf="@id/news_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/news_to_details"
        android:layout_width="245dp"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/teal_700"

        android:text="@string/details"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/news_to_web"
        android:layout_width="248dp"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/about"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/news_to_details" />

    <Button
        android:id="@+id/news_to_logout"
        android:layout_width="240dp"
        android:layout_height="54dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/teal_700"

        android:text="@string/logout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/news_to_web"

        />

</androidx.constraintlayout.widget.ConstraintLayout>